--- a/css/styles.css
+++ b/css/styles.css
@@ -33,8 +33,8 @@ body {
   color: #434455;
   background-color: #fff;
 }
-.conteiner {
-  max-width: 1128px;
+.container {
+  max-width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -56,9 +56,9 @@ body {
 
 /* Header styles */
 .page-header {
-  padding-top: 24px;
-  padding-bottom: 24px;
   border-bottom: 1px solid #e7e9fc;
+  display: flex;
+  justify-content: space-between;
 }
 .logo {
   font-family: "Raleway", sans-serif;
@@ -105,36 +105,29 @@ body {
 }
 .page-nav {
   display: flex;
+  align-items: center;
 }
 .menu {
   display: flex;
   gap: 40px;
   align-items: center;
 }
+.menu-item {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
 
 .contacts-list {
   display: flex;
-  gap: 20px;
-}
-.conteiner-header {
-  display: flex;
-  padding-left: 15px;
-  padding-right: 15px;
-  max-width: 1128px;
-  margin-left: auto;
-  margin-right: auto;
-  justify-content: space-between;
-  align-items: center;
+  gap: 40px;
 }
 /* ====================Main styles================== */
 /* section hero */
 .hero {
   background-color: #2e2f42;
+  padding: 188px 0;
 }
-.conteiner-hero {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
+
 .hero-title {
   display: block;
   font-size: 56px;
@@ -149,6 +142,7 @@ body {
   margin-bottom: 48px;
 }
 .hero-btn {
+  border: none;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -170,13 +164,16 @@ body {
   background-color: #404bbf;
 }
 /* section skills */
+.skills {
+  padding: 120px 0;
+}
 .skills-name {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
 }
 .skills-item {
   width: calc((100%-72px) / 4);
@@ -185,9 +182,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
-.conteiner-skills {
-  padding: 120px 135px;
 }
 
 .skills-list {
@@ -199,11 +193,9 @@ body {
 /* section our team */
 .person-team {
   background-color: #f4f4fd;
+  padding: 120px 0;
 }
-.conteiner-person-team {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
+
 .person-team-list {
   display: flex;
   justify-content: center;
@@ -223,7 +215,7 @@ body {
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
-  margin-bottom: 70px;
+  margin-bottom: 72px;
 }
 .person-title {
   font-weight: 500;
@@ -232,18 +224,19 @@ body {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  margin-top: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
 }
 .person-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
-  padding-bottom: 30px;
+}
+.person-container {
+  padding: 32px 0;
 }
 /* section our portfolio */
-.coteiner-possibility {
+.possibility {
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -252,6 +245,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   gap: 24px;
+  row-gap: 48px;
 }
 .possibility-title {
   font-size: 36px;
@@ -260,12 +254,17 @@ body {
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
-  margin-bottom: 70px;
+  margin-bottom: 72px;
 }
 .possibility-item {
   border: 1px solid #e7e9fc;
   background: #fff;
-  width: calc((100%-48px) / 3);
+  width: calc((100% - 48px) / 3);
+}
+.possibility-container {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 .possibility-item-title {
   font-weight: 500;
@@ -273,24 +272,19 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  margin-top: 20px;
-  padding-left: 10px;
+  margin-bottom: 8px;
 }
 .possibility-item-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding-left: 10px;
-  padding-bottom: 20px;
 }
 /*==================Footer styles===================== */
 .lower {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
-.conteiner-lower {
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
+
 .lower-link {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -300,8 +294,8 @@ body {
   text-transform: uppercase;
   color: #4d5ae5;
   padding-left: 140px;
-  display: block;
-  margin-bottom: 15px;
+  display: inline-block;
+  margin-bottom: 16px;
   min-width: 115px;
 }
 .lower-studio-color {
