--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,8 @@ body {
   background-color: #fff;
 }
 .container {
-  max-width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
+  width: 1158px;
+  padding: 0 15px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -123,6 +122,7 @@ body {
 .contacts-list {
   display: flex;
   gap: 40px;
+  align-items: center;
 }
 /* ====================Main styles================== */
 /* section hero */
